k8s/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  type: NodePort
  selector:
    app: grocy
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30180
