k8s/grocy/ingress.yaml
# Ingress dla Grocy - grocy.192.168.1.24.nip.io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy-ingress
  namespace: grocy
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: grocy.192.168.1.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocy
            port:
              number: 80
  tls:
  - hosts:
    - grocy.192.168.1.24.nip.io
    secretName: grocy-tls
